<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/naslovStanja"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/naslovStanja"
        android:textAlignment="center"
        style="@style/textViewStyle"
        android:textSize="25sp"/>
    
    <TextView
        android:id="@+id/prihodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prihod"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="100dp"
        app:layout_constraintTop_toBottomOf="@+id/naslovStanja"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/holo_green_light"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/rashodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rashod"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="100dp"
        app:layout_constraintTop_toBottomOf="@+id/prihodText"
        android:layout_marginTop="70dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/razlikaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razlika"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="100dp"
        app:layout_constraintTop_toBottomOf="@+id/rashodText"
        android:layout_marginTop="70dp"
        style="@style/textViewStyle"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/prihodBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/prihodText"
        android:layout_marginLeft="70dp"
        app:layout_constraintTop_toBottomOf="@+id/naslovStanja"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:textColor="@android:color/holo_green_light"/>

    <TextView
        android:id="@+id/rashodBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/rashodText"
        android:layout_marginLeft="58dp"
        app:layout_constraintTop_toBottomOf="@+id/prihodBroj"
        android:layout_marginTop="70dp"
        android:textSize="25sp"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/razlikaBroj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/razlikaText"
        android:layout_marginLeft="58dp"
        app:layout_constraintTop_toBottomOf="@+id/rashodBroj"
        android:layout_marginTop="70dp"
        android:textSize="25sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>