<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IzmenaActivity">

    <TextView
        android:id="@+id/podaciTransakcijaNaslov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/podaci_o_prihodu_rashodu"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/textViewStyle"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/podaciTransakcijaDolar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podaciTransakcijaNaslov"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_baseline_attach_money_24black"/>

    <TextView
        android:id="@+id/podaciTransakcijaNaslovUnos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/podaciNaslov"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toBottomOf="@id/podaciTransakcijaDolar"
        style="@style/textViewStyle"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/podaciTransakcijaNaslovEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Naslov"
        app:layout_constraintStart_toEndOf="@id/podaciTransakcijaNaslovUnos"
        app:layout_constraintTop_toBottomOf="@id/podaciTransakcijaDolar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"/>

    <EditText
        android:id="@+id/podaciTransakcijaKolicinaEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="1000"
        app:layout_constraintStart_toEndOf="@id/izmenaKolicina"
        app:layout_constraintTop_toBottomOf="@id/podaciTransakcijaNaslovEditText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"/>

    <TextView
        android:id="@+id/izmenaKolicina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/podaciKolicina"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podaciTransakcijaNaslovUnos"
        android:layout_marginLeft="25dp"
        style="@style/textViewStyle"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/unosOpis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/opis"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toBottomOf="@+id/izmenaKolicina"
        style="@style/textViewStyle"
        android:layout_marginTop="25dp"/>

    <ImageView
        android:id="@+id/podaciTransakcijaBtnPlay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unosOpis"
        android:layout_marginTop="60dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/podaciTransakcijaBtnPause"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_pause_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unosOpis"
        android:layout_marginTop="60dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/podaciTransakcijaTFOpis"
        android:layout_width="340dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unosOpis"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>